# straDellaMIDI_au_vst

./: .gitignore  CMakeLists.txt  MOUSE_MIDI_EXPRESSION.md  MouseMidiExpression.cpp  MouseMidiSettingsWindow.cpp  README.md  straDellaMIDI_plugin.jucer
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h  include_juce_audio_processors_headless.mm
Source/: LessonsWindow.cpp  LessonsWindow.h  MappingSettingsWindow.cpp  MappingSettingsWindow.h  MouseMidiExpression.cpp  MouseMidiExpression.h  MouseMidiSettingsWindow.cpp  MouseMidiSettingsWindow.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  StradellaKeyboardMapper.cpp  StradellaKeyboardMapper.h  default_keyboard_mapping.txt
Source/lessons/: getting_started.lesson
